--- a/app/scripts/poc/views/main.html
+++ b/app/scripts/poc/views/main.html
@@ -6,7 +6,7 @@
   </p>
 </div>
 <div class="jumbotron" ng-if="results.length > 0">
-  <div ng-repeat="result in results">{{ result }}</div>
+  <div ng-repeat="result in results">{{ result.smartTitle }}</div>
 </div>
 
   <div>
