--- a/app/scripts/poc/views/main.html
+++ b/app/scripts/poc/views/main.html
@@ -1,9 +1,12 @@
-<div class="jumbotron" ng-if="results == undefined || results.length == 0">
+<div class="jumbotron" ng-if="results == undefined">
   <img src="images/logo.png"><br>
   <h1>Proof of Concept</h1>
   <p class="lead">
     Allways there to impress chicks.
   </p>
+</div>
+<div class="jumbotron" ng-if="results.length == 0">
+  no results
 </div>
 <div class="jumbotron" ng-if="results.length > 0">
   <div ng-repeat="result in results">{{ result.smartTitle }}</div>
@@ -11,12 +14,15 @@
 
   <div>
     Service name: {{ service.nickname }}
-    <form ng-submit = "search(selected_category)">
+    <form
+      name      = "searchForm"
+      ng-submit = "search(selected_category)">
       <select 
         ng-model   = "selected_category" 
+        ng-change  = "search(selected_category)"
         ng-options = "cat.alias as cat.title for cat in categories">
       </select>
-      <input type="text" ng-model="query" />
+      <!-- <input type="text" ng-model="query" /> -->
       <input type="submit" />
     </form>
   </div>
