Hello Foundation. Préparation du DOM.

--- a/app/scripts/poc/views/main.html
+++ b/app/scripts/poc/views/main.html
@@ -1,8 +1,7 @@
 <div class="jumbotron" ng-if="results == undefined">
-  <img src="images/logo.png"><br>
   <h1>Proof of Concept</h1>
   <p class="lead">
-    Allways there to impress chicks.
+    Allways there to impress chicks and dicks.
   </p>
 </div>
 <div class="jumbotron" ng-if="results.length == 0">
