--- a/app/scripts/poc/views/overview.html
+++ b/app/scripts/poc/views/overview.html
@@ -1,1 +1,2 @@
 <h1>Overview</h1>
+<leaflet width="640px" height="480px" tiles="tiles" defaults="defaults" bounds="bounds" center="center" markers="markers"></leaflet>
