--- a/app/scripts/poc/views/main.html
+++ b/app/scripts/poc/views/main.html
@@ -32,9 +32,9 @@
 
 <div ng-if="results.length > 0">
   {{ results.length }} results
-
-  <leaflet width="640px" height="480px" defaults="defaults" center="center" markers="markers"></leaflet>
-
+  <div class="row">
+    <leaflet width="100%" height="480px" class="large-12 columns" defaults="defaults" center="center" markers="markers"></leaflet>
+  </div>
   <div ng-repeat="result in results">
     <a ng-href="#/entry/{{ result.id }}" ng-bind-html="result.smartTitle"></a>
   </div>
