--- a/app/scripts/poc/views/main.html
+++ b/app/scripts/poc/views/main.html
@@ -26,15 +26,15 @@
   </form>
 </div>
 
-<div class="jumbotron" ng-show="results.length == 0">
-  no results
-</div>
 
 <leaflet width="100%" height="480px" class="large-12 columns" defaults="defaults" center="center" markers="markers"></leaflet>
 
+<div ng-show="results.length == 0">no results</div>
 <div ng-show="results.length > 0">
   {{ results.length }} results
-  <div ng-repeat="result in results">
-    <a ng-href="#/entry/{{ result.id }}" ng-bind-html="result.smartTitle"></a>
-  </div>
+  <ul>
+    <li ng-repeat="result in results">
+      <a ng-href="#/entry/{{ result.id }}" ng-bind-html="result.smartTitle"></a>
+    </li>
+  </ul>
 </div>
