main renamed to search

--- a/app/scripts/poc/views/header.html
+++ b/app/scripts/poc/views/header.html
@@ -19,7 +19,7 @@
         <li class="has-dropdown">
           <a href="#">Menu</a>
           <ul class="dropdown">
-            <li><a ng-href="#/main">Main</a></li>
+            <li><a ng-href="#/main">Search</a></li>
             <li><a ng-href="#/overview">Overview</a></li>
             <li><a ng-href="#/about">About</a></li>
           </ul>
